# git_summarize

./: .env.example  .gitignore  Cargo.toml  PRODUCTION_READINESS.md  dprint.json  readme.md
config/: default.toml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/database/: client.rs  embeddings.rs  insert.rs  mod.rs  schema.rs
src/exporter/: json.rs  mod.rs
src/extractor/: crypto.rs  incident.rs  ioc.rs  mod.rs  patterns.rs
src/generation/: mod.rs
src/mcp/: mod.rs  persistence.rs  server.rs
src/models/: crypto_address.rs  document.rs  incident.rs  ioc.rs  mod.rs  search_result.rs
src/parser/: chunker.rs  frontmatter.rs  markdown.rs  mod.rs  normalizer.rs
src/pipeline/: mod.rs  orchestrator.rs  processor.rs  progress.rs
src/repository/: classifier.rs  mod.rs  scanner.rs  sync.rs
src/utils/: logging.rs  mod.rs  telemetry.rs  template.rs  validation.rs
