[package]
name = "git_summarize"
version = "0.1.0"
authors = ["â„­ğ”¦ğ”­ğ”¥ğ”¢ğ”¯", "https://github.com/cipher-rc5"]
edition = "2024"
repository = "https://github.com/cipher_rc5/git_summarize"
description = "RAG pipeline for any GitHub repository using LanceDB"

[dependencies]
# error handling
anyhow = "1.0.100"

# time
chrono = "0.4.41"

# commandline
clap = { version = "4.5.51", features = ["derive", "env"] }

# database - LanceDB for vector storage and RAG
arrow = "55.2.0"
arrow-array = "55.2.0"
arrow-schema = "55.2.0"
colored = "2.1"
lancedb = "0.21.0"

# configuration
config = "0.15.18"
dotenvy = "0.15"
futures = "0.3.31"
gix = { version = "0.74.1", default-features = false, features = ["blocking-network-client", "worktree-mutation", "revision", "interrupt"] }
gix-index = "0.42.1"
gix-worktree = "0.43.1"
gix-worktree-state = "0.21.0"

# progress reporting
indicatif = "0.18.2"

# entity extraction
lazy_static = "1.5.0"

# markdown processing
pulldown-cmark = { version = "0.13.0", default-features = false }
regex = "1.12.2"

# serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# hashing
sha2 = "0.10.9"
thiserror = "2.0.17"

# async runtime
tokio = { version = "1.48.0", features = ["full"] }

# HTTP client for Groq API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# MCP (Model Context Protocol) for agentic tool integration
rmcp = "0.4"
schemars = { version = "1.1.0", features = ["derive"] }

# logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "ansi"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
walkdir = "2.5.0"
yaml-rust = "0.4.5"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

# Optimize dependencies in dev mode for better performance
[profile.dev.package."*"]
opt-level = 2
