[package]
name = "git_summarize"
version = "0.1.0"
authors = ["ℭ𝔦𝔭𝔥𝔢𝔯", "https://github.com/cipher-rc5"]
edition = "2024"
repository = "https://github.com/cipher_rc5/git_summarize"
description = "RAG pipeline for any GitHub repository using LanceDB"

[dependencies]
# error handling
anyhow = "1.0.102"

# time
chrono = "0.4.45"

# commandline
clap = { version = "4.6.1", features = ["derive", "env"] }

# database - LanceDB for vector storage and RAG
# arrow pinned to 58.x because lancedb 0.30 depends on arrow 58.
arrow = "58.3.0"
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
colored = "3.1.1"
lancedb = "0.30.0"

# configuration
config = "0.15.23"
dotenvy = "0.15"
futures = "0.3.32"
gix = { version = "0.84.0", default-features = false, features = ["sha1", "blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "worktree-mutation", "revision", "interrupt"] }
gix-index = "0.52.0"
gix-worktree = "0.53.0"
gix-worktree-state = "0.31.0"

# progress reporting
indicatif = "0.18.4"

# entity extraction
lazy_static = "1.5.0"

# markdown processing
pulldown-cmark = { version = "0.13.4", default-features = false }
regex = "1.12.4"

# serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# hashing
sha2 = "0.11.0"
thiserror = "2.0.18"

# async runtime
tokio = { version = "1.52.3", features = ["full"] }

# HTTP client for Groq API
reqwest = { version = "0.13.4", features = ["json"], default-features = false }

# MCP (Model Context Protocol) for agentic tool integration
rmcp = "1.7.0"
schemars = { version = "1.2.1", features = ["derive"] }

# logging
glob = "0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "ansi"] }
uuid = { version = "1.23.3", features = ["v4", "serde"] }
walkdir = "2.5.0"
yaml-rust = "0.4.5"

[[bin]]
name = "git_summarize"
path = "src/main.rs"

[[bin]]
name = "gs-summary"
path = "src/bin/gs-summary.rs"

[[bin]]
name = "gs-mcp"
path = "src/bin/gs-mcp.rs"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

# Optimize dependencies in dev mode for better performance
[profile.dev.package."*"]
opt-level = 2
